fixed lists overflow
navbar working after this I hope.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,6 @@ header {
 ul {
     list-style-type: none;
     margin: auto;
-    overflow: hidden;
     background-color: white;
     display: inline-flex;
 }
